<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/app_logo"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/termsmdconditions"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"/>
    </LinearLayout>
</ScrollView>