<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"

                android:layout_marginEnd="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/createImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/done" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="50dp"
                android:text="@string/change_password"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTextView"
                android:hint="@string/password"
                android:textSize="18sp"
                android:autofillHints="@string/passowrd"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/editTextConfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPassword"
                android:layout_marginTop="15dp"
                android:hint="@string/conf_password"
                android:autofillHints="@string/conf_password"
                android:inputType="textPassword"

                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>